--- a/src/app/modal/modal.page.html
+++ b/src/app/modal/modal.page.html
@@ -5,5 +5,23 @@
 </ion-header>
 
 <ion-content>
+  <div *ngIf="note">
+    <ion-item>
+      <ion-label position="stacked">Title</ion-label>
+      <ion-input [(ngModel)]="note.title"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Note</ion-label>
+      <ion-textarea [(ngModel)]="note.text" rows="8"></ion-textarea>
+    </ion-item>
+  </div>
 
+  <ion-button expand="block" color="success" (click)="updateNote()">
+    <ion-icon name="save" slot="start"></ion-icon>
+    Update
+  </ion-button>
+  <ion-button expand="block" color="danger" (click)="deleteNote()"> 
+    <ion-icon name="trash" slot="start"></ion-icon>
+    DELETE 
+  </ion-button>
 </ion-content>
